<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/de" />

        <TextView
            android:id="@+id/textViewDe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="false"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha" />

        <TextView
            android:id="@+id/textViewFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="false"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/botonLlamar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/llamar" />

        <Button
            android:id="@+id/botonMensaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sms" />

        <Button
            android:id="@+id/botonBuscarGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buscar_internet" />

    </LinearLayout>

</LinearLayout>